eqdkp_swtor.css
/* ... */
.notsigned_button {
	outline: none;
	float: right;
	display: block;
}

span.group_selector {
	outline: none;
	float: right;
	display: block;
}

.notsignedpanel_close{
	cursor: pointer;
}
.notsignedpanel_close:before{
	content: "\f057";
	font-family: FontAwesome;
	color: red;
	font-size: 32px;
	position: absolute;
	top: -8px;
	left: -14px;
}

#memberScroller{
	height: 300px;
	overflow:auto;
	width:380px;
}
#pnlMemButton{
	padding-left:60px;
	padding-top:15px;
}
#pnlHeader{
	font-size: 13pt;
	font-weight: bold;
}

.raidcal_actionbar{
	margin: 5px;
	cursor: pointer;
}
#raidcal_signin_form div{
	height: 50px;
	display:table-cell;
	vertical-align:middle;
}
#raidcal_change_signin{
	float:right;
	margin-top:14px;
	margin-right:10px;
}
.charchange_menu, .notechange_menu{
	display: none;
}
.charchange_menucontainer{
	background-color:#466988;
	overflow: hidden;
}

/* general: game specific */
.resists {
	width: 27px;
	text-align: center;
	color: white;
	font-weight: bold;
	font-size: 12px !important;
}

/* general: validate error messages */
label.error {
	color: red;
	font-style: italic;
	display:inline-block;
	padding-left:20px;
	line-height:16px;
}
label.error:before {
	content: "\f071";
	font-family: FontAwesome;
	color: red;
	line-height:16px;
	margin-right: 2px;
}
div.error { display: none; }

/* character view */
.profile_header{
	margin: 7px 0 20px 7px;
	min-height: 48px;
}
.profile_header img {
	float: left;
	margin: 0 10px 0 0;
}
.profile_header .charname {
	font-size: 1.6em;
	font-weight: normal;
	text-align: left;
}
.profile_header.charlevel{}
.profile_header.charguild{}

.profile_picture {
	float:left;
}

.profile_picture img {
	max-width: 300px;
}


.floatRight {
	float: right;
}

.floatLeft {
	float: left;
}

/* news */
.news_author {
	margin-top: 4px;
	margin-bottom: 10px;
	color: #9f9f9f;
}

.article_content{
	line-height: 16px;
}
.article_content p {
	margin-top: 10px;
	margin-bottom: 10px;
}

.news {
	padding-bottom: 10px;
	border-bottom: 1px solid #fff;
	margin-bottom: 10px;
}

.news_header {
	position:relative;
}

.contentSideRight{
	text-align: left;
	border-left: 1px solid #ccc;
	padding: 15px;
	margin-left: 15px;
	margin-top: 5px;
}

.news_comments .top {
	font-size: 22px;
}

.image_zoom{
	color:#204C75;
}

.contentWidth30{
	width: 30%;
}

.contentWidth40{
	width: 40%;
}

.contentWidth50{
	width: 50%;
}

.contentWidth60{
	width: 60%;
}

.contentWidth70{
	width: 70%;
}

/* comments */
.smilies{
	width:20px;
	height:20px;
}
.comment_avatar {
	vertical-align:middle;
	text-align:center;
}

.comment_avatar img{
	max-width: 100px;
	height: 70px;
	border: 1px solid #ccc;
	border-radius: 4px;
	box-shadow: 1px 1px 2px #000000;
}

.comment_avatar_container {
	float: left;
	width: 120px;
	margin-right: 20px;
}

.comment_container, .comment_write_container {
	position: relative;
	min-height: 68px;
	padding: 5px;
	background: #FFFFFF;
	border: #ccc solid 1px;
	-webkit-border-radius: 4px;
	-moz-border-radius: 4px;
	border-radius: 4px;
	margin-left: 130px;
	word-break: break-all;
	color: #555;
}

.comment_container:after, .comment_write_container:after {
	content: "";
	position: absolute;
	top: 21px;
	left: -15px;
	border-style: solid;
	border-width: 11px 15px 11px 0;
	border-color: transparent #FFFFFF;
	display: block;
	width: 0;
	z-index: 1;
}

.comment_container:before, .comment_write_container:before {
	content: "";
	position: absolute;
	top: 21px;
	left: -16px;
	border-style: solid;
	border-width: 11px 15px 11px 0;
	border-color: transparent #ccc;
	display: block;
	width: 0;
	z-index: 0;
}

.comment_author {
	color: #9f9f9f;
	margin-bottom: 5px;
	font-size: 11px;
}
.comment_text blockquote {
	margin-right: 20px;
}
#comment_button, .reply-trigger,.reply_button {
	margin-left: 130px;
}

.comment-reply,.reply-form-container {
	margin-left: 110px;
}

.reply-form-container {
	margin-top: 10px;
}

.writeComments .boxHeader{
	display: none;
}

.comment_reply_container{
	clear:both;
}

.comment-reply .comment_container, .comment-reply .comment_write_container {
	background-color: #efefef;
}

.comment-reply .comment_container:after {
	border-color: transparent #efefef;
}


strong {
	font-weight: bold;
}

em {
	font-style: italic;
}

.hiddenDesktop {
	display:none;
}

.hiddenSmartphone {
	display: inline;
}

td.hiddenSmartphone, th.hiddenSmartphone {
	display: table-cell;
}

.ui-notify h1 {
	border: none;
}

.ui-notify a:hover {
	color: #4E7FA8;
	text-decoration: underline;
}

/* Social Bookmarks */
.social-bookmarks li {
	float: left;
	margin-right: 7px;
}

.social-bookmarks li a.social-bookmarks-count {
	font-size: 12px;
	padding: 2px 4px 2px 4px;
	text-decoration: none;
	width: 100px;
	display: block;
	color: #fff;
	padding-left: 5px;
	border-radius: 4px;
	position: relative;
}

.social-bookmarks li a.social-bookmarks-count i{
	font-size: 18px;
	vertical-align: middle;
}

.social-bookmarks a.twitter {
	background-color: #55acee;
}

.social-bookmarks a.twitter:hover {
	background-color: #32bbf5;
}

.social-bookmarks a.facebook {
	background-color: #3b5998;
}

.social-bookmarks a.facebook:hover {
	background-color: #4273c8;
}

.social-bookmarks a.gplus {
	background-color: #d34836;
}

.social-bookmarks a.gplus:hover {
	background-color: #f75b44;
}

.social-bookmarks .share-count {
	position: absolute;
	background: #fff;
	color: #4e5665;
	font-size: 11px;
	border-radius: 2px;
	display: inline-block;
	text-align: center;
	border: 1px solid #9197a3;
	padding: 0 3px;
	min-width: 15px;
	right: 3px;
	line-height: 15px;
}

.share-count:before {
	content: "";
	position: absolute;
	top: 4px;
	left: -6px;
	border-style: solid;
	border-width: 4px 5px 4px 0;
	border-color: transparent #9197a3;
	display: block;
	width: 0;
	z-index: 0;
}
.share-count:after {
	content: "";
	position: absolute;
	top: 4px;
	left: -5px;
	border-style: solid;
	border-width: 4px 5px 4px 0;
	border-color: transparent #FFFFFF;
	display: block;
	width: 0;
	z-index: 1;
}

.user-avatar {
	max-height: 48px;
}
/* ... */

